# brian

./: README.md
brian_description/: CMakeLists.txt  package.xml
brian_description/blender_model/: base.blend  femur_l.blend  femur_l.blend1  femur_r.blend  femur_r.blend1  hip_bl.blend  hip_bl.blend1  hip_br.blend  hip_br.blend1  hip_fl.blend  hip_fl.blend1  hip_fr.blend  hip_fr.blend1  lidar.blend  lidar.blend1  tibia_l.blend  tibia_l.blend1  tibia_r.blend  tibia_r.blend1
brian_description/launch/: show_robot.launch.py
brian_description/mesh_files/dae_files/: base.dae  femur_l.dae  femur_r.dae  hip_bl.dae  hip_br.dae  hip_fl.dae  hip_fr.dae  lidar.dae  tibia_l.dae  tibia_r.dae
brian_description/mesh_files/obj_files/: base.mtl  base.mtl.mtl  femur_l.mtl  femur_r.mtl  hip_bl.mtl  hip_br.mtl  hip_fl.mtl  hip_fr.mtl  lidar.mtl  tibia_l.mtl  tibia_r.mtl  tibia_r.mtl.mtl
brian_description/rviz/: show_model.rviz
brian_description/urdf/: brian.urdf  brian_visualize_collision.urdf
brian_description/weights_and_geometry/: README.md  Untitled.ipynb  robot_collision_and_inertia.ipynb  robot_kinematics.ipynb
brian_description/weights_and_geometry/.ipynb_checkpoints/: robot_collision_and_inertia-checkpoint.ipynb  robot_kinematics-checkpoint.ipynb  robot_kinematics_DH_params_not_working-checkpoint.ipynb
brian_description/weights_and_geometry/hrl_geom/: pose_converter.py  transformations.py
brian_description/weights_and_geometry/pykdl_utils/: joint_kinematics.py  kdl_kinematics.py  kdl_parser.py
brian_msgs/: CMakeLists.txt  package.xml
brian_pybullet/: package.xml  (+1 more)
(+25 files in other folders)
